@@ -29,6 +29,8 @@ S3method(getFailureModelMsg,BaseWrapperModel)
 S3method(getFailureModelMsg,FailureModel)
 S3method(getFailureModelMsg,HomogeneousEnsembleModel)
 S3method(getFailureModelMsg,WrappedModel)
+S3method(getFilteredFeatures,FilterModel)
+S3method(getFilteredFeatures,default)
 S3method(getHyperPars,BaseEnsemble)
 S3method(getHyperPars,BaseWrapper)
 S3method(getHyperPars,Learner)
